crates/vexor-compiler/tests/golden/error/output/fn_missing_body.err
Error: parse error
   ╭─[ input:2:13 ]
   │
 2 │ fn double(x)
   │             ┬  
   │             ╰── expected `=`
───╯
